--- a/Frontend/templates/base.html
+++ b/Frontend/templates/base.html
@@ -44,6 +44,9 @@
                 <li class="nav-item">
                 <a class="nav-link active" href="/inventory/view_products/">Products</a>
                 </li>
+                <li class="nav-item">
+                <a class="nav-link active" href="/order_management/view_customers/">Customers</a>
+                </li>
                 <li class="nav-item dropdown">
                 <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Dropdown
