create order model using foreign key reference and create view for CRUD operation

--- a/Frontend/templates/customers.html
+++ b/Frontend/templates/customers.html
@@ -3,7 +3,7 @@
 
 
 <a href="/order_management/add_customers/">
-    <button style="margin-left:20px auto;">Add New Customer</button>
+    <button>Add New Customer</button>
 </a>
 
 
