--- a/Frontend/templates/products.html
+++ b/Frontend/templates/products.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <a href="/inventory/add_products/">
-    <button style="margin-left:20px auto;">Add new product</button>
+    <button>Add new product</button>
 </a>
 
 <table>
@@ -24,15 +24,16 @@
             <td>{{ product.price }}</td>
             <td>{{ product.gst }}</td>
             <td>
-                <a href="{% url 'delete_product' product.id %}">
-                    <button class="">Delete</button>
-                </a>
-            </td>
-            <td>
                 <a href="{% url 'update_product' product.id %}">
                     <button class="">update</button>
                 </a>
             </td>
+            <td>
+                <a href="{% url 'delete_product' product.id %}">
+                    <button class="">Delete</button>
+                </a>
+            </td>
+            
         </tr>
         {% endfor %}
     </tbody>
