--- a/Frontend/templates/base.html
+++ b/Frontend/templates/base.html
@@ -47,6 +47,9 @@
                 <li class="nav-item">
                 <a class="nav-link active" href="/order_management/view_customers/">Customers</a>
                 </li>
+                <li class="nav-item">
+                <a class="nav-link active" href="/order_management/view_orders/">Orders</a>
+                </li>
                 <li class="nav-item dropdown">
                 <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Dropdown
