--- a/Frontend/templates/login.html
+++ b/Frontend/templates/login.html
@@ -31,6 +31,10 @@
                         </div>
                         <p class="text-danger fw-bold">{{error}}</p>
                         <button type="submit" class="btn btn-primary w-100">Login</button>
+
+                        <div class="card-footer text-center">
+                            Didn't have an account? <a href="{% url 'register' %}">Register</a>
+                        </div>
                     </form>
                 </div>
             </div>
