--- a/Frontend/templates/customers.html
+++ b/Frontend/templates/customers.html
@@ -2,38 +2,40 @@
 {% block content %}
 
 
-<a href="/order_management/add_customers/">
-    <button>Add New Customer</button>
-</a>
+<div style="width: 80%; margin: 0 auto;">
+    <table>
+        <thead>
+            <tr class="text-dark">
+                <th>Customer Name</th>
+                <th>Customer Since</th>
+                <th>update Customer</th>
+                <th>Delete Customer</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for customer in all_customers %}
+            <tr>
+                <td>{{customer.customer_name}}</td>
+                <td>{{customer.customer_since}}</td>
+                <td>
+                    <a href="{% url 'update_customers' customer.id %}">
+                        <button class="btn btn-primary">Update</button>
+                    </a>
+                </td>
+                <td>
+                    <a href="{% url 'delete_customers' customer.id %}">
+                        <button class="btn btn-danger">Delete</button>
+                    </a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 
+    <div class="d-flex justify-content-end mt-3">
+        <a href="/order_management/add_customers/" class="btn btn-primary">ADD CUSTOMERS</a>
+    </div>
 
-<table>
-    <thead>
-        <tr>
-            <th>Customer Name</th>
-            <th>Customer Since</th>
-            <th>update Customer</th>
-            <th>Delete Customer</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for customer in all_customers %}
-        <tr>
-            <td>{{customer.customer_name}}</td>
-            <td>{{customer.customer_since}}</td>
-            <td>
-                <a href="{% url 'update_customers' customer.id %}">
-                    <button class="">Update</button>
-                </a>
-            </td>
-            <td>
-                <a href="{% url 'delete_customers' customer.id %}">
-                    <button class="">Delete</button>
-                </a>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+</div>
 
 {% endblock %}
