--- a/Frontend/templates/add_orders.html
+++ b/Frontend/templates/add_orders.html
@@ -1,10 +1,20 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<form action="" method="POST">
-    {% csrf_token %}
-    {{ order_form }}
-    <input type="submit" value="add order"/>
-</form>
+<div class="d-flex flex-row justify-content-center mt-3">
+    <h1>Add Customers</h1>
+</div>
+
+<div class="container">
+    <form action="" method="POST">
+        {% csrf_token %}
+        {{ order_form }}
+        <br/>
+        <div class="d-flex flex-row justify-content-end ">
+            <input class="btn btn-success" type="submit" value="add Order">
+        </div>
+    </form>
+</div>
+
 
 {% endblock %}
