--- a/Frontend/templates/add_products.html
+++ b/Frontend/templates/add_products.html
@@ -1,12 +1,20 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>add products</h1>
+<div class="d-flex flex-row justify-content-center mt-3">
+    <h1>Add Products</h1>
+</div>
 
-<form method="POST" action="">
-    {%csrf_token %}
-    {{product_form}}
-    <input type="submit" value="Add Product">
-</form>
+<div class="container">
+    <form method="POST" action="">
+        {%csrf_token %}
+        {{product_form}}
+        <br/>
+        <div class="d-flex flex-row justify-content-end">
+            <input class="btn btn-success" type="submit" value="Add Product">
+        </div>
+        
+    </form>
+</div>
 
 {% endblock %}
