--- a/Frontend/templates/add_products.html
+++ b/Frontend/templates/add_products.html
@@ -6,7 +6,7 @@
 </div>
 
 <div class="container">
-    <form method="POST" action="">
+    <form method="POST" action="" enctype="multipart/form-data">
         {%csrf_token %}
         {{product_form}}
         <br/>
