--- a/Frontend/templates/register.html
+++ b/Frontend/templates/register.html
@@ -57,6 +57,16 @@
                                 <label for="email" class="form-label">age</label>
                                 <input type="number" name="age" class="form-control" required>
                             </div>
+
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Role</label>
+                                <select name="role" class="form-control" required>
+                                    <option value="" disabled selected>Select a role</option>
+                                    <option value=0>Admin</option>
+                                    <option value=1>Manager</option>
+                                    <option value=2>Employee</option>
+                                </select>
+                            </div>
                             
                             <div class="mb-3">
                                 <label for="password1" class="form-label">Password</label>
