--- a/Frontend/templates/base.html
+++ b/Frontend/templates/base.html
@@ -44,12 +44,18 @@
                 <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/inventory/home/">Home</a>
                 </li>
+
+                {% if request.user.role == 0 %}
+
                 <li class="nav-item">
                 <a class="nav-link active" href="/inventory/view_products/">Products</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link active" href="/order_management/view_customers/">Customers</a>
                 </li>
+
+                {% endif %}
+
                 <li class="nav-item">
                 <a class="nav-link active" href="/order_management/view_orders/">Orders</a>
                 </li>
